# terminal-fps

./: Cargo.toml  LICENSE  README.md
src/: main.rs  player.rs  utils.rs
